Cambio en is_valid_state

--- a/water_sort_solver.ipynb
+++ b/water_sort_solver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "ae451128",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53287396",
    "metadata": {},
    "outputs": [],
@@ -66,6 +66,9 @@
     "        is_valid = -1\n",
     "        o_empty = self.is_empty(t_origen)\n",
     "        d_empty = self.is_empty(t_destino)\n",
+    "        if o_empty: \n",
+    "            return -1\n",
+    "\n",
     "        if d_empty:\n",
     "            is_valid = self.capacity\n",
     "        else:\n",
@@ -86,7 +89,7 @@
     "        return j-1\n",
     "    \n",
     "    def capacityTube(self,tube):\n",
-    "        return np.sum(arr == 0)\n",
+    "        return np.sum(tube == 0)\n",
     "\n",
     "    def is_empty(self,tube):\n",
     "        is_empty = True\n",
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "d8e077f8",
    "metadata": {},
    "outputs": [
